--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,12 @@
-<h1>Colcho.net</h1>
-<p>
-  Escolha uma das ações a seguir:
+<h1>Quartos recém postados</h1>
+
+<% if @rooms.exists?%>
 <ul>
-  <li><%= link_to "Cadastro", new_user_path %> </li>
-  <li><%= link_to "Visualizar quartos", rooms_path %> </li>
+  <%= @rooms.each do |room| %>
+    <li><%= link_to room.complete_name, room  %></li>
+  <% end %>
 </ul>
-</p>
+<% else %>
+  <h3>Não focaram cadastros quartos!</h3>
+
+<%end%>
