--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,14 +2,34 @@
 <html>
   <head>
     <title>Colchonet</title>
+    <link href='http://fonts.googleapis.com/css?family=Pacifico'
+    rel='stylesheet' type='text/css'>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+    <header>
+      <h1><%= link_to "colcho.net", root_path %> </h1>
+      <nav>
+        <ul>
+          <li><%= link_to "Quartos", rooms_path %> </li>
+          <li><%= link_to "Cadastro", new_user_path %> </li>
+        </ul>
+      </nav>
+
+    </header>
+    <div id="content">
+      <% if notice.present? %>
+        <p id="notice"><%= notice %> </p>
+      <% end %>
+      <% if alert.present? %>
+        <p id="alert"><%= alert %> </p>
+      <% end %>
+      <%= yield %>
+    </div>
   </body>
 </html>
