refactor: apply i18n on templates

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,6 @@
 <% if @user.errors.any? %>
   <div id="error_explanation">
-    <h2>Infelizmente não foi possivel completar a ação pois o formulário possui os seguintes errros</h2>
+    <h2><%= t "general.form_error" %></h2>
     <ul>
     <%= @user.errors.full_messages.each do |message| %>
       <li><%= message %></li>
