--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Atualizar</h1>
+<h1><%= t'users.edit.title' %></h1>
 
 <%= render 'form'%>
-<%= link_to  "Voltar", @user %>
+<%= link_to  t('links.back'), @user %>
